--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
     <body>
         <h1>Press a Key to Start</h1>
 
-        <div class="row">
-            <button id="green" class="btn green"></button>
-            <button id="red" class="btn red"></button>
+           <div class="row">
+            <div class="col-lg-6">
+                <button id="green" class="btn green"></button>
+                <button id="red" class="btn red"></button>
+            </div>
+           
         </div>
 
         <div class="row"> 
-            <button id="yellow" class="btn yellow"></button>
-            <button id="blue" class="btn blue"></button>
+
+            <div class="col-lg-6">
+                <button id="yellow" class="btn yellow"></button>
+                <button id="blue" class="btn blue"></button>
+            </div>
+           
         </div>
 
         <footer>
