--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Press a Key to Start</h1>
 
            <div class="row">
-            <div class="col-lg-6">
+            <div class="col-6">
                 <button id="green" class="btn green"></button>
                 <button id="red" class="btn red"></button>
             </div>
@@ -25,7 +25,7 @@
 
         <div class="row"> 
 
-            <div class="col-lg-6">
+            <div class="col-6">
                 <button id="yellow" class="btn yellow"></button>
                 <button id="blue" class="btn blue"></button>
             </div>
