--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Simon Game</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +11,7 @@
     </head>
 
     <body>
-        <h1>Press a Key to Start</h1>
+        <h1>Click here to Start</h1>
 
            <div class="row">
             <div class="col-6">
